--- a/client/style.css
+++ b/client/style.css
@@ -9,14 +9,14 @@
 }
 
 body {
-  background: white;
+  background:white;
+ color:gold;
 }
 
 #app {
   width: 100vw;
   height: 100vh;
-  background: white;
-
+  background:#0A1828;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,15 +29,13 @@ body {
   height: 100%;
   overflow-y: scroll;
 
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+  gap: 3px;
 
   -ms-overflow-style: none;
-  scrollbar-width: none;
+ 
 
-  padding-bottom: 20px;
-  scroll-behavior: smooth;
+  padding-bottom: 200px;
+ 
 }
 
 /* hides scrollbar */
@@ -51,7 +49,7 @@ body {
 }
 
 .ai {
-  background: whitesmoke;
+  background: #0A1825;
 }
 
 .chat {
@@ -71,7 +69,7 @@ body {
   height: 36px;
   border-radius: 5px;
 
-  background:  rgb(0, 0, 6);
+  background:  #18005f;
 
   display: flex;
   justify-content: center;
@@ -79,7 +77,8 @@ body {
 }
 
 .ai .profile {
-  background: rgb(30, 159, 153);
+  background:red;
+ 
 
 }
 
@@ -121,9 +120,9 @@ body {
 form {
   width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 10 auto;
   padding: 10px;
-  background: black;
+  background:black;
 
   display: flex;
   flex-direction: row;
@@ -133,7 +132,7 @@ form {
 textarea {
   width: 100%;
 
-  color: 	white;
+  color: white;
   font-size: 18px;
 
   padding: 10px;
